/**
 * Build workflow guidelines
 * api -> (fabric, forge, legacy, neoforge) -> (1.12, 1.16, 1.18, 1.19, 1.20, 1.21) -> (minor versions) -> main
 * Shading and relocation must happen within each module to properly respect reobfuscation.
 * Any necessary reobfuscations must happen in the version the deobfuscations happened in.
 */

apply from: rootProject.file('buildSrc\\shared.gradle')
java.toolchain.languageVersion = JavaLanguageVersion.of(23)

def fabric = project(':fabric')
def legacy_1_12_2 = project(':legacy:1.12')
def fabric_1_16_5 = project(':fabric:fabric_1.16')
def fabric_1_18_2 = project(':fabric:fabric_1.18')
def fabric_1_19_2 = project(':fabric:1.19:fabric_1.19.2')
def fabric_1_19_4 = project(':fabric:1.19:fabric_1.19.4')
def fabric_1_20_1 = project(':fabric:1.20:fabric_1.20.1')
def fabric_1_20_4 = project(':fabric:1.20:fabric_1.20.4')
def fabric_1_20_6 = project(':fabric:1.20:fabric_1.20.6')
def fabric_1_21_1 = project(':fabric:1.21:fabric_1.21.1')
def forge_1_16_5 = project(':forge:forge_1.16')
def forge_1_18_2 = project(':forge:forge_1.18')
def forge_1_19_2 = project(':forge:1.19:forge_1.19.2')
def forge_1_19_4 = project(':forge:1.19:forge_1.19.4')
def forge_1_20_1 = project(':forge:1.20:forge_1.20.1')
def forge_1_20_4 = project(':forge:1.20:forge_1.20.4')
def forge_1_20_6 = project(':forge:1.20:forge_1.20.6')
def forge_1_21_1 = project(':forge:1.21:forge_1.21.1')
def neoforge_1_20_1 = project(':neoforge:1.20:neoforge_1.20.1')
def neoforge_1_20_4 = project(':neoforge:1.20:neoforge_1.20.4')
def neoforge_1_20_6 = project(':neoforge:1.20:neoforge_1.20.6')
def neoforge_1_21_1 = project(':neoforge:1.21:neoforge_1.21.1')

processResources {
    fabric.afterEvaluate { from(it.processResources.outputs) }
}

processTestResources {
    fabric.afterEvaluate { from(it.processTestResources.outputs) }
}

jar {
    legacy_1_12_2.afterEvaluate { from(it.shadowJar.archiveFile.collect { zipTree(it) }) }
    fabric_1_16_5.afterEvaluate { from(it.remapJar.archiveFile.collect { zipTree(it) }) }
    forge_1_16_5.afterEvaluate { from(it.shadowJar.archiveFile.collect { zipTree(it) }) }
    fabric_1_18_2.afterEvaluate { from(it.remapJar.archiveFile.collect { zipTree(it) }) }
    forge_1_18_2.afterEvaluate { from(it.shadowJar.archiveFile.collect { zipTree(it) }) }
    manifest {
        attributes([
                'Implementation-Title': mod_name,
                'Implementation-Version': mod_version,
                'TILMultiversionCoreMods': core_entrypoint,
                'TILMultiversionMods': common_entrypoint
        ])
    }
}

[ ':legacy:1.12:build',
  ':fabric:fabric_1.16:build', ':forge:forge_1.16:build',
  ':fabric:fabric_1.18:build', ':forge:forge_1.18:build' ].forEach { tasks.jar.dependsOn(it) }